# Calculator

./: CMakeLists.txt  README.md
src/: Doxyfile  Makefile  git.sh
src/develop/: smartcalc.h
src/develop/controller/: controller.cpp  controller.h
src/develop/model/: calculator.cpp  calculator.h  credit_calculator.cpp  deposit_calculator.cpp
src/develop/tests/: tests.cpp
src/develop/view/: controllerOperation.cpp  design.h  eventProcessing.cpp  layout.cpp  main.cpp  viewCredCalc.cpp  viewDepCalc.cpp  viewGraph.cpp  widgets.cpp
